--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "VSCode light default theme with a few changes",
   "license": "MIT",
   "version": "1.0.0",
+  "publisher": "kytosai",
   "icon": "images/icon.png",  
   "repository": {
 		"type": "git",
@@ -43,7 +44,6 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "json-easy-strip": "^1.0.6",
     "json5": "^2.2.0"
   }
 }
